# weather_app_rust

./: Cargo.toml
src/: lib.rs  main.rs
src/modules/: mod.rs
src/modules/components/: headers.rs  main_page.rs  mainpage.css
src/modules/helpers/: network_call.rs  system_functions.rs
src/modules/pages/: home_page.rs
