[package]
name = "weather_app"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = {version =  "0.21.0", features = ['csr']}
yewdux ={version = "0.10.0"}
gloo ={ version = "0.11.0"}
serde = { version = "1.0.210"}
serde_json = { version = "1.0.128"}
wasm-bindgen = { version = "0.2.93"}
wasm-bindgen-futures = { version = "0.4.43"}
web-sys = { version = "0.3.70", features = ["HtmlTextAreaElement", "HtmlSelectElement", "Geolocation", "Navigator", "Window"] }
yew-bootstrap = { version = "0.11.0"}
stylist = {version = "0.13", features = ["yew", "parser"]}
reqwasm = { version = "0.5.0"}
url ={ version = "2.5.2"}